--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies" : {
-    "express" : "~4.0.0",           
+    "express" : "4.x",           
     "ejs" : "~0.8.5",               
     "mongoose" : "~3.8.1",          
     "passport" : "~0.1.17",         
