--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.0",
     "method-override": "~1.0.0",
-    "express-session": "~1.0.0"     
+    "express-session": "1.14.1"     
   },
   "devDependencies": {},
   "scripts": {
